--- a/semana2/bugfixes/home.html
+++ b/semana2/bugfixes/home.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="container" id="container-para-comprar">
-            <p> BORA COMEÇAR A </p>
+            <p> BORA COMEÇAR A </p><br>
             <button class="botao-amarelo" > COMPRAR </button>
         </div>
     </div>
