--- a/semana2/bugfixes/home.html
+++ b/semana2/bugfixes/home.html
@@ -14,7 +14,7 @@
     <h2>For Ever 4</h2>
     <div>
         <div class="container" id="container-de-descricao">
-            <p> Somos uma empresa focada em tornar a compra de roupas mais fácil </p>
+            <p> Somos uma empresa focada <br> em tornar a compra de<br> roupas mais fácil </p>
             <ol>
                 <li> Ache os melhores descontos </li>
                 <li> Busque pelos seus gostos</li>
@@ -23,7 +23,7 @@
         </div>
 
         <div class="container" id="container-para-comprar">
-            <p> BORA COMEÇAR A </p><br>
+            <p> BORA COMEÇAR A </p>
             <button class="botao-amarelo" > COMPRAR </button>
         </div>
     </div>
